Police-Fatal-Shooting---Capstone-Project-
Added inferential statistics analysis

--- a/Final_Capstone_1.ipynb
+++ b/Final_Capstone_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3083,6 +3083,513 @@
     "x = top1_off_cities['poverty_rate']\n",
     "plt.scatter(x, y)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Infrential Statistics "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "H0 : P(W) = P(B)\n",
+    "\n",
+    "Ha : P(W) ≠ P(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shooting_BW = shooting[(shooting.race == 'W') | (shooting.race == 'B')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shooting_BH = shooting[(shooting.race == 'H') | (shooting.race == 'B')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shooting_WH = shooting[(shooting.race == 'H') | (shooting.race == 'W')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shooting_BHW = shooting[(shooting.race == 'W') | (shooting.race == 'B')| (shooting.race == 'H')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BW['race'] , shooting_BW['signs_of_mental_illness'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(104.13276968215455,\n",
+       " 1.892029141168674e-24,\n",
+       " 1,\n",
+       " array([[1173.70307868,  330.29692132],\n",
+       "        [2248.29692132,  632.70307868]]))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BW['race'] , shooting_BW['Age_range'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(278.0463597882436,\n",
+       " 5.232052662513741e-58,\n",
+       " 5,\n",
+       " array([[  75.11715003,  688.05937429,  431.83786253,  245.58849052,\n",
+       "           58.31011646,    3.08700617],\n",
+       "        [ 143.88284997, 1317.94062571,  827.16213747,  470.41150948,\n",
+       "          111.68988354,    5.91299383]]))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BW['race'] , shooting_BW['gender'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8.214497458571758,\n",
+       " 0.0041557022468619465,\n",
+       " 1,\n",
+       " array([[  78.54412771, 1425.45587229],\n",
+       "        [ 150.45587229, 2730.54412771]]))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7.48637333063842,\n",
+       " 0.0062167636931308905,\n",
+       " 1,\n",
+       " array([[1282.71770335,  221.28229665],\n",
+       "        [ 856.28229665,  147.71770335]]))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BH['race'] , shooting_BH['signs_of_mental_illness'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5.31931779109414,\n",
+       " 0.3781651538784015,\n",
+       " 5,\n",
+       " array([[1.22416300e+02, 8.65915302e+02, 3.67848981e+02, 1.19415901e+02,\n",
+       "         2.52033560e+01, 1.20015981e+00],\n",
+       "        [8.15836996e+01, 5.77084698e+02, 2.45151019e+02, 7.95840991e+01,\n",
+       "         1.67966440e+01, 7.99840192e-01]]))"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BH['race'] , shooting_BH['Age_range'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.40750204110393307,\n",
+       " 0.5232401012433292,\n",
+       " 1,\n",
+       " array([[  54.57097289, 1449.42902711],\n",
+       "        [  36.42902711,  967.57097289]]))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BH['race'] , shooting_BH['gender'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35.83909454487542,\n",
+       " 2.1430421793132307e-09,\n",
+       " 1,\n",
+       " array([[ 761.59279279,  242.40720721],\n",
+       "        [2185.40720721,  695.59279279]]))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_WH['race'] , shooting_WH['signs_of_mental_illness'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(189.30420360608616,\n",
+       " 5.502218106256053e-39,\n",
+       " 5,\n",
+       " array([[  42.59025271,  440.09927798,  302.5198556 ,  173.7166065 ,\n",
+       "           40.26714801,    1.80685921],\n",
+       "        [ 122.40974729, 1264.90072202,  869.4801444 ,  499.2833935 ,\n",
+       "          115.73285199,    5.19314079]]))"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_WH['race'] , shooting_WH['Age_range'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9.97224457087743,\n",
+       " 0.0015891764057806988,\n",
+       " 1,\n",
+       " array([[  52.71969112,  951.28030888],\n",
+       "        [ 151.28030888, 2729.71969112]]))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_WH['race'] , shooting_WH['gender'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(119.61601543295328,\n",
+       " 1.060992405109825e-26,\n",
+       " 2,\n",
+       " array([[1187.23622193,  316.76377807],\n",
+       "        [ 792.543329  ,  211.456671  ],\n",
+       "        [2274.22044906,  606.77955094]]))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BHW['race'] , shooting_BHW['signs_of_mental_illness'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(373.60323296220093,\n",
+       " 3.870340881220192e-74,\n",
+       " 10,\n",
+       " array([[  82.0795539 ,  719.45241636,  424.91524164,  221.67063197,\n",
+       "           51.36951673,    2.51263941],\n",
+       "        [  54.70148699,  479.47527881,  283.18252788,  147.73122677,\n",
+       "           34.23494424,    1.67453532],\n",
+       "        [ 157.21895911, 1378.07230483,  813.90223048,  424.59814126,\n",
+       "           98.39553903,    4.81282528]]))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BHW['race'] , shooting_BHW['Age_range'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15.850885865241544,\n",
+       " 0.0003614297253551906,\n",
+       " 2,\n",
+       " array([[  73.12080163, 1430.87919837],\n",
+       "        [  48.81202449,  955.18797551],\n",
+       "        [ 140.06717387, 2740.93282613]]))"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BHW['race'] , shooting_BHW['gender'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(58.56279175811426,\n",
+       " 2.407435735824621e-11,\n",
+       " 5,\n",
+       " array([[2.32073620e+02, 6.19263804e+01],\n",
+       "        [2.03419632e+03, 5.42803681e+02],\n",
+       "        [1.20141513e+03, 3.20584867e+02],\n",
+       "        [6.26756646e+02, 1.67243354e+02],\n",
+       "        [1.44453988e+02, 3.85460123e+01],\n",
+       "        [7.10429448e+00, 1.89570552e+00]]))"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BHW['Age_range'] , shooting_BHW['signs_of_mental_illness'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14.323737730910254,\n",
+       " 0.0001539117934410425,\n",
+       " 1,\n",
+       " array([[ 206.85746102,   55.14253898],\n",
+       "        [4047.14253898, 1078.85746102]]))"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BHW['gender'] , shooting_BHW['signs_of_mental_illness'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15.850885865241544,\n",
+       " 0.0003614297253551906,\n",
+       " 2,\n",
+       " array([[  73.12080163, 1430.87919837],\n",
+       "        [  48.81202449,  955.18797551],\n",
+       "        [ 140.06717387, 2740.93282613]]))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BHW['race'] , shooting_BHW['gender'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(23.95553347716645,\n",
+       " 0.00022142650440802475,\n",
+       " 5,\n",
+       " array([[1.42654769e+01, 2.79734523e+02],\n",
+       "        [1.24992750e+02, 2.45100725e+03],\n",
+       "        [7.38505298e+01, 1.44814947e+03],\n",
+       "        [3.85264919e+01, 7.55473508e+02],\n",
+       "        [8.92805354e+00, 1.75071946e+02],\n",
+       "        [4.36698271e-01, 8.56330173e+00]]))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observe_tbl = pd.crosstab(shooting_BHW['Age_range'] , shooting_BHW['gender'] )\n",
+    "stats.chi2_contingency(observe_tbl)"
    ]
   },
   {
